--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .wrapper {
+            position: absolute;
+            width: 400px;
+            height: 400px;
+            border: 1px solid black;
+            /* overflow: hidden; */
+
+        }
+        .wrapper .content{
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            left: 50%;
+            top: 50%;
+            background: red;
+            
+            /* margin-top: -100px;
+            margin-left: -100px; */
+            transform: translate(-100px,-100px);
+        }
+    </style>
 </head>
+
 <body>
-    <div></div>
+    <div class="wrapper">
+        <div class="content"></div>
+    </div>
+
+
+
+
 </body>
+
 </html>
